scrollbar fix bug

--- a/web/src/styles/pages styles/services.css
+++ b/web/src/styles/pages styles/services.css
@@ -315,15 +315,15 @@
         width: 95%;
     }
     .servicesText::-webkit-scrollbar {
-        width: 6px;
+        width: 3px;
     }
 
     .servicesText::-webkit-scrollbar-track {
-        border-radius: 6px;
+        border-radius: 1.5px;
     }
 
     .servicesText::-webkit-scrollbar-thumb {
-        border-radius: 3px;
+        border-radius: 1.5px;
     }
 
     .serviceTitle {
